--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -25,14 +25,17 @@ jobs:
         cd DijkstraAlgorithm
         dotnet build --configuration Release --no-restore
     
+    - name: Test
+    - run: dotnet test
+
     - name: Pack
       run: |  
           cd DijkstraAlgorithm
           dotnet pack -c Release -o out  
     
-    - name: Push DijkstraAlgorithm to GitHub registry
+    - name: Publish DijkstraAlgorithm to GitHub registry
       run: |
-        dotnet nuget add source -name "GPR" -Source https://nuget.pkg.github.com/lucassklp/index.json -Username lucassklp -Password ${{ secrets.GITHUB_TOKEN }}
+        dotnet nuget add source https://nuget.pkg.github.com/lucassklp/index.json --name "GPR" --username lucassklp --password ${{ secrets.GITHUB_TOKEN }}
         dotnet nuget push ./DijkstraAlgorithm/out/*.nupkg --skip-duplicate
     
     - name: Publish DijkstraAlgorithm to nuget.org
