--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -26,7 +26,7 @@ jobs:
         dotnet build --configuration Release --no-restore
     
     - name: Test
-    - run: dotnet test
+      run: dotnet test
 
     - name: Pack
       run: |  
