Renaming Package to Dijkstra.Algorithm

--- a/Dijkstra.Algorithm.Tests/Dijkstra.Algorithm.Tests.csproj
+++ b/Dijkstra.Algorithm.Tests/Dijkstra.Algorithm.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DijkstraAlgorithm\DijkstraAlgorithm.csproj" />
+    <ProjectReference Include="..\Dijkstra.Algorithm\Dijkstra.Algorithm.csproj" />
   </ItemGroup>
 
 </Project>
