--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Build
       run: |
-        cd DijkstraAlgorithm
+        cd Dijkstra.Algorithm
         dotnet build --configuration Release --no-restore
     
     - name: Test
@@ -30,16 +30,12 @@ jobs:
 
     - name: Pack
       run: |  
-          cd DijkstraAlgorithm
+          cd Dijkstra.Algorithm
           dotnet pack -c Release -o out  
     
-    - name: Publish DijkstraAlgorithm to GitHub registry
-      run: |
-        dotnet nuget add source https://nuget.pkg.github.com/lucassklp/index.json --name "GPR" --username lucassklp --password ${{ secrets.GITHUB_TOKEN }}
-        dotnet nuget push ./DijkstraAlgorithm/out/*.nupkg --skip-duplicate
-    
-    - name: Publish DijkstraAlgorithm to nuget.org
+    - name: Publish Dijkstra.Algorithm to nuget.org
       uses: brandedoutcast/publish-nuget@v2.5.5
       with:
-          PROJECT_FILE_PATH: DijkstraAlgorithm/DijkstraAlgorithm.csproj
+          PROJECT_FILE_PATH: Dijkstra.Algorithm/Dijkstra.Algorithm.csproj
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
+
